[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "BuilDa"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "more-itertools>=10.6.0",
    "json-five>=1.1.2",
    "fmpy>=0.3.22",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "regex>=2024.11.6",
    "scipy>=1.15.2",
]


[tool.hatch.build.targets.wheel]
packages = ["src"]
force-include = {"resources" = "BuilDa/resources"}